--- a/index.html
+++ b/index.html
@@ -11,12 +11,59 @@
 </head>
 
 <body>
-    <div class="backdrop"></div>
-    <button class="btn show-modal">show modal</button>
-    <div class="modal">
-        <h41>title : Modal!</h41>
-        <button class="btn close-modal">close</button>
-        <button class="btn confirm-modal">confirm</button>
+    <div class="container">
+        <div class="backdrop"></div>
+        <div class="info">
+            <div class="buttons">
+                <button data-modal="#modal-1" class="btn show-modal">modal 1</button>
+                <button data-modal="#modal-2" class="btn show-modal">modal 1</button>
+                <button data-modal="#modal-3" class="btn show-modal">modal 1</button>
+            </div>
+        </div>
+        <div id="modal-1" class="modal modal-1">
+            <div class="modal-header">
+                <h3>title : Modal!</h3>
+                <button class="btn close-modal">&times;</button>
+            </div>
+            <div class="modal-content">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium commodi, magnam animi facilis voluptatem optio perspiciatis quam eum. Possimus qui ex laborum exercitationem nam harum magni. Dignissimos officia temporibus facilis alias atque. Voluptatem,
+                    deleniti. Praesentium qui dignissimos repellendus ex.
+                </p>
+            </div>
+        </div>
+        <div id="modal-2" class="modal modal-2">
+            <div class="modal-header">
+                <h3>title : Big Modal!</h3>
+                <button class="btn close-modal">&times;</button>
+            </div>
+            <div class="modal-content">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium commodi, magnam animi facilis voluptatem optio perspiciatis quam eum. Possimus qui ex laborum exercitationem nam harum magni. Dignissimos officia temporibus facilis alias atque. Voluptatem,
+                    deleniti. Praesentium qui dignissimos repellendus ex.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium commodi, magnam animi facilis voluptatem optio perspiciatis quam eum. Possimus qui ex laborum exercitationem nam harum magni. Dignissimos officia temporibus facilis alias atque. Voluptatem,
+                    deleniti. Praesentium qui dignissimos repellendus ex.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium commodi, magnam animi facilis voluptatem optio perspiciatis quam eum. Possimus qui ex laborum exercitationem nam harum magni. Dignissimos officia temporibus facilis alias atque. Voluptatem,
+                    deleniti. Praesentium qui dignissimos repellendus ex.
+                </p>
+            </div>
+        </div>
+        <div id="modal-3" class="modal modal-3">
+            <div class="modal-header">
+                <h3>title : Last Modal!</h3>
+                <button class="btn close-modal">&times;</button>
+            </div>
+            <div class="modal-content">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium commodi, magnam animi facilis voluptatem optio perspiciatis quam eum. Possimus qui ex laborum exercitationem nam harum magni. Dignissimos officia temporibus facilis alias atque. Voluptatem,
+                    deleniti.
+                </p>
+            </div>
+        </div>
     </div>
 </body>
 
